--- a/week4/day1/delivery/eda_library.ipynb
+++ b/week4/day1/delivery/eda_library.ipynb
@@ -144,15 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "error",
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-25-29fed4f17e90>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-1-86477f56470b>, line 2)",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-25-29fed4f17e90>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    Filtra_l1 = lambda x: x==True if x > 5\u001b[0m\n\u001b[1;37m                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-86477f56470b>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    Filtra_l1 = lambda x : x+2 if x > 5\u001b[0m\n\u001b[1;37m                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -172,7 +172,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@prepost(url=key_url)\n",
+    "_f_protected(x):"
+   ]
   }
  ],
  "metadata": {
@@ -191,7 +194,7 @@
   "pygments_lexer": "ipython3",
   "version": 3,
   "kernelspec": {
-   "name": "python_defaultSpec_1594736542384",
+   "name": "python_defaultSpec_1594800947640",
    "display_name": "Python 3"
   }
  },
